# airconvision

PTAML/: .clang_complete  ARDriver.cc  ARDriver.h  ARToolkit.cc  ARToolkit.h  ATANCamera.cc  ATANCamera.h  Bundle.cc  Bundle.h  CMakeLists.txt  CameraCalibrator  CameraCalibrator.cc  CameraCalibrator.h  FPSCounter.h  FeatureGrid.cc  FeatureGrid.h  Filters.h  Frontend.cc  Frontend.h  GLWindow2.cc  GLWindow2.h  HomographyInit.cc  InitialTracker.cc  InitialTracker.h  KeyFrame.cc  KeyFrame.h  MKConnection.cc  MKConnection.h  MKProtocol.h  Makefile  Map.cc  Map.h  MapMaker.cc  MapMaker.h  MapPoint.h  MapSerializer.cc  MapSerializer.h  MapViewer.cc  MapViewer.h  MikroKopter.cc  (+38 more)
PTAML/CameraCalibrator/: CMakeLists.txt  CameraCalibrator.cc  CameraCalibrator.h
PTAML/Data/: extrinsics.yml  intrinsics.yml
PTAML/Data/oldcam/: extrinsics.yml  intrinsics.yml
PTAML/FeatureScatterPlot/: CMakeLists.txt  plot.py  scatter.cc
PTAML/PTAML/: ARDriver.h  ARToolkit.h  ATANCamera.h  Bundle.cc  Bundle.h  CMakeLists.txt  FastTest.cc  FeatureGrid.cc  FeatureGrid.h  FrameGrabber.cc  FrameGrabber.h  Frontend.cc  Frontend.h  FrontendRenderer.cc  FrontendRenderer.h  GLWindow2.cc  HomographyInit.cc  HomographyInit.h  InitialTracker.cc  KeyFrame.cc  MKConnection.cc  MKProtocol.cc  Map.cc  Map.h  MapMaker.cc  MapMaker.h  MikroKopter.cc  Rectangle.h  Relocaliser.cc  ScaleMarkerTracker.cc  ScaleMarkerTracker.h  ShiTomasi.cc  SmallBlurryImage.cc  StereoPlaneFinder.cc  StereoPlaneFinder.h  System.cc  System.h  TargetController.cc  TargetController.h  Tracker.cc  (+9 more)
PTAML/PTAML/agast/: agast7_12s.h  agast7_12s_nms.cc  oast9_16.h  oast9_16_nms.cc
PTAML/agast/: agast5_8.cc  agast5_8.h  agast5_8_init.h  agast5_8_nms.cc  agast7_12d.cc  agast7_12d.h  agast7_12d_init.h  agast7_12d_nms.cc  agast7_12s.cc  agast7_12s_init.h  agast7_12s_nms.cc  nonMaximumSuppression.cc  nonMaximumSuppression.h  oast9_16.cc  oast9_16_init.h  oast9_16_nms.cc
PTAML/src/: .Swarm.cc.swp  ATANCamera.h  CMakeLists.txt  Filters.h  FrameGrabber.cc  FrameGrabber.h  Frontend.cc  Frontend.h  FrontendRenderer.cc  GLWindow2.cc  GLWindow2.h  HomographyInit.cc  InitialTracker.h  KeyFrame.cc  MKConnection.cc  MKConnection.h  MKProtocol.cc  Map.cc  Map.h  MapLockManager.cc  MapMaker.cc  MapMaker.h  MapSerializer.cc  MapViewer.cc  MathUtils.cc  MathUtils.h  MikroKopter.cc  MikroKopter.h  MiniPatch.h  PatchFinder.cc  PatchFinder.h  PerformanceMonitor.cc  PerformanceMonitor.h  Rectangle.cc  Relocaliser.cc  SmallBlurryImage.h  StereoPlaneFinder.cc  StereoPlaneFinder.h  Swarm.cc  Swarm.h  (+17 more)
PTAML/src/agast/: README  agast5_8.h  agast5_8_nms.cc  agast7_12d.h  agast7_12d_nms.cc  agast7_12s.h
